style.css
html, body {
    margin: 0;
    height: 200vh;
    font-family: Arial, sans-serif;
  }

  body {
    background: #db763e;
    text-align: center;
  }

  div {
  	margin: 20px;
  	margin-left: 100px;
  	margin-right: 100px;
  	background: #213d37;
  	border-radius: 15px;
  }

  h1, p {
  	color: #d0d0ce;
  	text-align: left;
  	padding-right: 20px;
  	padding-left: 20px;
  	padding-bottom: 20px;
  }

  h3 {
  	color: #d0d0ce;
  	text-align: left;
  	padding-right: 20px;
  	padding-left: 20px;
  	padding-top: 20px;
  }

  ol,ul {
  	color: #d0d0ce;
  	text-align: left;
  	padding-left: 100px;
  	padding-right: 90px;
  }

  li {
  	padding-bottom: 20px;
  }

  h1 {
  	padding-top: 20px;
  	font-weight: normal;
  }

  h3 {
  	font-weight: normal;
  }

  a { 
  	text-decoration: underline;
    text-align: center;
    color: #90d5ff;
	}

	button {
		background-color: #bd9e82;
		border-radius: 5px;
	/*	width: auto;
  	height: auto;*/
	}

	img {
		max-width:100%;
		max-height:100%;
	}

	table, th, td {
  	border: solid 1px black;
    border-collapse: collapse;
	}

	table { 
	  table-layout: fixed;
	  width: 	90%;
	  margin: 0px auto;
	}

	.table-container {
	  flex-shrink: 1;
	  overflow-y: auto;
	}

	.container {
	  display: flex;
	  flex-direction: column;
	  height: 100%;
	  width: 100%;
	}
  
	.header {
		position: fixed;
		top: 5%;
		left: 50%;
		transform: translate(-50%, -50%);
		padding: 60px;
	  text-align: right;
	  color: #d0d0ce;
	  font-size: 30px;
	}

  #text {
    position: fixed;
    top: 50%;
    left: 50%;
    transform-origin: top left;
    white-space: nowrap;
    font-size: 100px; /* base size for measuring */
    color: #aa4c0f;
    pointer-events: none;
  }
 
  .scroll-spacer {
  	height: 100vh;
  }

  .marquee {
  	position: fixed;
  	bottom: 0;
  	width: 100%;
  	overflow: hidden;
  	background: #bd9e82;
  	border-top: 1px solid #222;
  }

  .marquee__items {
  	display: flex;
  	width: max-content;
  	animation: marquee 25s linear infinite;
  }

  .marquee span {
  	white-space: nowrap;
  	font-size: 24px;
  	padding-right: 2rem;
  	color: black;
  }

  @keyframes marquee {
  	from {
  		transform: translateX(0);
  	}
  	to {
  		transform: translateX(-50%);
  	}
  }

